# serializer version: 1
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <MastodonBinarySensor.BOT: 'bot'>,
    'unique_id': 'trwnh_mastodon_social_bot',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social None',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <MastodonBinarySensor.DISCOVERABLE: 'discoverable'>,
    'unique_id': 'trwnh_mastodon_social_discoverable',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social None',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <MastodonBinarySensor.LOCKED: 'locked'>,
    'unique_id': 'trwnh_mastodon_social_locked',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social None',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <MastodonBinarySensor.MOVED: 'moved'>,
    'unique_id': 'trwnh_mastodon_social_moved',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social None',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <MastodonBinarySensor.INDEXABLE: 'indexable'>,
    'unique_id': 'trwnh_mastodon_social_indexable',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social None',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <MastodonBinarySensor.LIMITED: 'limited'>,
    'unique_id': 'trwnh_mastodon_social_limited',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social None',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <MastodonBinarySensor.MEMORIAL: 'memorial'>,
    'unique_id': 'trwnh_mastodon_social_memorial',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social None',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <MastodonBinarySensor.SUSPENDED: 'suspended'>,
    'unique_id': 'trwnh_mastodon_social_suspended',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.mastodon_trwnh_mastodon_social_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social None',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.mastodon_trwnh_mastodon_social_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
